--- a/.config
+++ b/.config
@@ -2661,6 +2661,8 @@ CONFIG_HAVE_HARDENED_USERCOPY_ALLOCATOR=y
 # CONFIG_SECURITY_YAMA is not set
 # CONFIG_SECURITY_SAFESETID is not set
 CONFIG_SECURITY_MEDUSA=y
+CONFIG_SECURITY_MEDUSA_VS=96
+CONFIG_SECURITY_MEDUSA_ACT=128
 CONFIG_SECURITY_MEDUSA_L4_CONSTABLE=y
 # CONFIG_SECURITY_LOCKDOWN_LSM is not set
 # CONFIG_SECURITY_LANDLOCK is not set
