--- a/security/medusa/Kconfig
+++ b/security/medusa/Kconfig
@@ -8,6 +8,26 @@ config SECURITY_MEDUSA
 	help
 	  This selects MEDUSA LSM.
 
+if SECURITY_MEDUSA
+
+config SECURITY_MEDUSA_VS
+        int "Number of bits representing Virtual Spaces (VS)"
+        default 96
+        range 32 512
+        depends on SECURITY_MEDUSA
+        help
+          There are no constraints for the number of VS, but for better
+          effectivity it should be multiply of 8.
+
+config SECURITY_MEDUSA_ACT
+        int "Number of bits representing triggered security hooks"
+        default 64
+        range 32 512
+        depends on SECURITY_MEDUSA
+        help
+          There are no constraints for the number of access types, but for
+          better effectivity it should be multiply of 8.
+
 config SECURITY_MEDUSA_L4_CONSTABLE
         tristate "MEDUSA L4 as MODULE"
         depends on SECURITY_MEDUSA
@@ -20,3 +40,5 @@ config SECURITY_MEDUSA_L4_CONSTABLE
 config SECURITY_MEDUSA_TESTING
 	bool "MEDUSA Test Support"
 	depends on SECURITY_MEDUSA && KUNIT
+
+endif # if SECURITY_MEDUSA
